test/types/range/lydia/badRange-string-multi.good
badRange-string-multi.chpl:1: In function 'main':
badRange-string-multi.chpl:2: error: param for-loops defined using bounds of type 'string' are not currently supported
